--- a/css/balearic-style.less
+++ b/css/balearic-style.less
@@ -1021,3 +1021,15 @@ WP-MEMBERS OVERRIDES
     font-size: 0.9rem;
     letter-spacing: -.5px;
 }
+
+.vip-closed-container {
+    padding: 4.5rem 1rem;
+    font-size: 1.1rem;
+    text-align: center;
+
+    & h1 {
+        font-size: 1.3rem;
+        font-weight: 700;
+        margin-bottom: 1.5rem;
+    }
+}
