--- a/css/balearic-mediaqueries.css
+++ b/css/balearic-mediaqueries.css
@@ -1,272 +1,1 @@
-/* --------------------------------------------------------------
-MEDIAQUERIES LG/MD - LAYOUTS BIGGER THAN 992px
--------------------------------------------------------------- */
-@media (max-width: 1680px) {
-  .home-main-content {
-    padding-left: 14vw !important;
-  }
-}
-@media (max-width: 1600px) {
-  .home-main-content {
-    padding-left: 11vw !important;
-  }
-}
-@media (max-width: 1440px) {
-  .home-main-content {
-    padding-left: 6vw !important;
-    padding-right: 5vw !important;
-  }
-}
-@media (max-width: 1366px) {
-  .home-main-content {
-    padding-left: 4vw !important;
-    padding-right: 4vw !important;
-  }
-}
-@media (max-width: 1280px) {
-  .home-main-content {
-    padding-left: 3vw !important;
-    padding-right: 3vw !important;
-    font-size: 1rem;
-    line-height: 1.8rem;
-  }
-}
-@media (max-width: 1170px) {
-  .home-main-content {
-    padding-left: 1.5vw !important;
-    padding-right: 1.5vw !important;
-    font-size: 0.9rem;
-    line-height: 1.6rem;
-  }
-  .home-services-section .home-service-item h3 {
-    font-size: 1rem;
-    line-height: 1.5rem;
-    margin-top: 1.2rem;
-  }
-  .main-banner-title .wrapper h1 {
-    font-size: 1.5rem;
-  }
-}
-/* --------------------------------------------------------------
-MEDIAQUERIES SM - LAYOUTS BIGGER THAN 768px
--------------------------------------------------------------- */
-@media (max-width: 991px) {
-  .the-footer .footer-item {
-    font-size: 0.8rem;
-    line-height: 1rem;
-    margin-bottom: 1rem;
-  }
-  .the-footer .footer-item .widget_nav_menu .menu .nav-item .nav-link {
-    font-size: 0.8rem;
-  }
-  .home-main-picture img {
-    max-width: 70%;
-    margin: 2rem auto;
-    display: block;
-  }
-  .home-main-content {
-    padding-left: 1rem !important;
-    padding-right: 1rem !important;
-    font-size: 1rem;
-    line-height: 1.9rem;
-    max-width: 70%;
-    margin: 0 auto;
-  }
-  .home-main-content h2 {
-    font-size: 1.3rem;
-  }
-  .home-location-tax .home-location-tax-wrap h2 {
-    padding: 0 18%;
-    font-size: 1rem;
-  }
-  .title-container {
-    padding: 3rem 4vw;
-    padding-top: 1rem;
-  }
-  .title-container h2 {
-    font-size: 1.3rem;
-    letter-spacing: 0.5px;
-  }
-  .home-contact-section .home-contact-preview {
-    font-size: 1.5rem;
-    line-height: 2rem;
-    text-align: center;
-    margin-bottom: 2rem;
-  }
-  .main-banner-title img {
-    width: auto;
-    height: 250px;
-    max-width: unset;
-    margin-left: -50%;
-    opacity: 0;
-  }
-  .main-contact-section .main-contact-preview {
-    margin-bottom: 2rem;
-    text-align: center;
-  }
-  .main-contact-section .main-contact-logo {
-    padding-bottom: 3rem;
-  }
-  .main-services-container .main-services-item-wrapper {
-    font-size: 0.9rem;
-    line-height: 1.5rem;
-    margin-bottom: 0;
-  }
-  .main-services-container .main-services-item-picture h3 {
-    font-size: 1rem;
-  }
-  .single .main-banner-title img {
-    width: 100%;
-    height: auto;
-    max-width: unset;
-    margin-left: 0;
-  }
-}
-/* --------------------------------------------------------------
-MEDIAQUERIES XS - LAYOUTS LESS THAN 600px
--------------------------------------------------------------- */
-@media (max-width: 767px) {
-  .the-logo .logo-container {
-    text-align: left;
-    padding-bottom: 0.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-  .the-footer .footer-item {
-    font-size: 0.9rem;
-    line-height: 1rem;
-    margin-bottom: 2rem;
-  }
-  .the-footer .footer-item .widget_nav_menu .menu .nav-item .nav-link {
-    font-size: 0.9rem;
-  }
-  .home-main-picture img {
-    max-width: 90%;
-    margin: 2rem auto;
-    display: block;
-  }
-  .home-main-content {
-    font-size: 1rem;
-    line-height: 1.9rem;
-    max-width: 90%;
-    margin: 0 auto;
-  }
-  .home-location-tax .wrapper img {
-    width: 100%;
-  }
-  .home-location-tax {
-    margin-bottom: 2rem;
-    max-width: 75%;
-    margin: 2rem auto;
-    margin-top: 0;
-    display: block;
-  }
-  .home-location-tax .home-location-tax-wrap h2 {
-    padding: 0 24%;
-    font-size: 1.5rem;
-  }
-  .home-contact-section .home-contact-item {
-    font-size: 0.9rem;
-    line-height: 1.6rem;
-  }
-  .home-main-section {
-    padding-top: 1rem;
-  }
-  .main-contact-section .main-contact-item {
-    font-size: 0.9rem;
-    line-height: 1.5rem;
-  }
-  .main-banner-title img {
-    width: auto;
-    height: 190px;
-    max-width: unset;
-    margin-left: -50%;
-  }
-  .main-contact-form-content {
-    padding-bottom: 2rem;
-    padding-left: 0;
-  }
-  .main-services-container .main-services-item-picture h3 {
-    font-size: 1.5rem;
-    line-height: 1.6rem;
-    max-width: 60%;
-    margin: 2rem auto;
-  }
-  .local-details-container .single-data {
-    flex: 0 0 50%;
-  }
-  .local-carac-container .single-data {
-    flex: 0 0 32%;
-  }
-  .single .main-banner-title img {
-    width: 100%;
-    height: auto;
-    max-width: unset;
-    margin-left: 0;
-  }
-  .main-filter-container {
-    padding: 1rem 0.5rem !important;
-  }
-  .main-filter-container .filter-content-item .btn-search {
-    margin-top: 1.5rem;
-    width: 100%;
-  }
-  .locals-main-container .locals-item {
-    margin-bottom: 1.5rem;
-    text-align: center;
-  }
-  .mobile-filter-hidden {
-    display: none;
-  }
-}
-@media (max-width: 600px) {
-  .main-banner-title img {
-    width: auto;
-    height: 190px;
-    max-width: unset;
-    margin-left: -50%;
-  }
-}
-@media (max-width: 424px) {
-  .home-location-tax {
-    max-width: 85%;
-  }
-  .title-container h2 {
-    font-size: 1.1rem;
-    line-height: 1.7rem;
-  }
-  .home-main-content h2 {
-    font-size: 1.1rem;
-  }
-  .home-location-tax .home-location-tax-wrap h2 {
-    font-size: 1.2rem;
-  }
-  .main-banner-title img {
-    width: auto;
-    height: 190px;
-    max-width: unset;
-    margin-left: -105%;
-  }
-  .main-services-container .main-services-item-picture h3 {
-    max-width: 80%;
-  }
-  .local-details-container .single-data {
-    flex: 0 0 100%;
-    font-size: 0.9rem;
-    line-height: 1.8rem;
-    padding: 0.3rem 0;
-  }
-  .local-carac-container .single-data {
-    flex: 0 0 50%;
-    font-size: 0.9rem;
-    line-height: 1.8rem;
-    padding: 0.3rem 0;
-  }
-}
-@media (max-width: 414px) {
-  .main-services-container .main-services-item-picture h3 {
-    max-width: 100%;
-  }
-}
+@media (max-width:1680px){.home-main-content{padding-left:14vw !important}}@media (max-width:1600px){.home-main-content{padding-left:11vw !important}}@media (max-width:1440px){.home-main-content{padding-left:6vw !important;padding-right:5vw !important}}@media (max-width:1366px){.home-main-content{padding-left:4vw !important;padding-right:4vw !important}}@media (max-width:1280px){.home-main-content{padding-left:3vw !important;padding-right:3vw !important;font-size:1rem;line-height:1.8rem}}@media (max-width:1170px){.home-main-content{padding-left:1.5vw !important;padding-right:1.5vw !important;font-size:.9rem;line-height:1.6rem}.home-services-section .home-service-item h3{font-size:1rem;line-height:1.5rem;margin-top:1.2rem}.main-banner-title .wrapper h1{font-size:1.5rem}}@media (max-width:991px){.the-footer .footer-item{font-size:.8rem;line-height:1rem;margin-bottom:1rem}.the-footer .footer-item .widget_nav_menu .menu .nav-item .nav-link{font-size:.8rem}.home-main-picture img{max-width:70%;margin:2rem auto;display:block}.home-main-content{padding-left:1rem !important;padding-right:1rem !important;font-size:1rem;line-height:1.9rem;max-width:70%;margin:0 auto}.home-main-content h2{font-size:1.3rem}.home-location-tax .home-location-tax-wrap h2{padding:0 18%;font-size:1rem}.title-container{padding:3rem 4vw;padding-top:1rem}.title-container h2{font-size:1.3rem;letter-spacing:.5px}.home-contact-section .home-contact-preview{font-size:1.5rem;line-height:2rem;text-align:center;margin-bottom:2rem}.main-banner-title img{width:auto;height:250px;max-width:unset;margin-left:-50%;opacity:0}.main-contact-section .main-contact-preview{margin-bottom:2rem;text-align:center}.main-contact-section .main-contact-logo{padding-bottom:3rem}.main-services-container .main-services-item-wrapper{font-size:.9rem;line-height:1.5rem;margin-bottom:0}.main-services-container .main-services-item-picture h3{font-size:1rem}.single .main-banner-title img{width:100%;height:auto;max-width:unset;margin-left:0}}@media (max-width:767px){.the-logo .logo-container{text-align:left;padding-bottom:.5rem;display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap}.the-footer .footer-item{font-size:.9rem;line-height:1rem;margin-bottom:2rem}.the-footer .footer-item .widget_nav_menu .menu .nav-item .nav-link{font-size:.9rem}.home-main-picture img{max-width:90%;margin:2rem auto;display:block}.home-main-content{font-size:1rem;line-height:1.9rem;max-width:90%;margin:0 auto}.home-location-tax .wrapper img{width:100%}.home-location-tax{margin-bottom:2rem;max-width:75%;margin:2rem auto;margin-top:0;display:block}.home-location-tax .home-location-tax-wrap h2{padding:0 24%;font-size:1.5rem}.home-contact-section .home-contact-item{font-size:.9rem;line-height:1.6rem}.home-main-section{padding-top:1rem}.main-contact-section .main-contact-item{font-size:.9rem;line-height:1.5rem}.main-banner-title img{width:auto;height:190px;max-width:unset;margin-left:-50%}.main-contact-form-content{padding-bottom:2rem;padding-left:0}.main-services-container .main-services-item-picture h3{font-size:1.5rem;line-height:1.6rem;max-width:60%;margin:2rem auto}.local-details-container .single-data{flex:0 0 50%}.local-carac-container .single-data{flex:0 0 32%}.single .main-banner-title img{width:100%;height:auto;max-width:unset;margin-left:0}.main-filter-container{padding:1rem .5rem !important}.main-filter-container .filter-content-item .btn-search{margin-top:1.5rem;width:100%}.locals-main-container .locals-item{margin-bottom:1.5rem;text-align:center}.mobile-filter-hidden{display:none}}@media (max-width:600px){.main-banner-title img{width:auto;height:190px;max-width:unset;margin-left:-50%}}@media (max-width:424px){.home-location-tax{max-width:85%}.title-container h2{font-size:1.1rem;line-height:1.7rem}.home-main-content h2{font-size:1.1rem}.home-location-tax .home-location-tax-wrap h2{font-size:1.2rem}.main-banner-title img{width:auto;height:190px;max-width:unset;margin-left:-105%}.main-services-container .main-services-item-picture h3{max-width:80%}.local-details-container .single-data{flex:0 0 100%;font-size:.9rem;line-height:1.8rem;padding:.3rem 0}.local-carac-container .single-data{flex:0 0 50%;font-size:.9rem;line-height:1.8rem;padding:.3rem 0}}@media (max-width:414px){.main-services-container .main-services-item-picture h3{max-width:100%}}
