--- a/css/balearic-mediaqueries.less
+++ b/css/balearic-mediaqueries.less
@@ -1,4 +1,4 @@
-// compress: false, javascriptEnabled: true
+// compress: true, javascriptEnabled: true
 /* --------------------------------------------------------------
 MEDIAQUERIES LG/MD - LAYOUTS BIGGER THAN 992px
 -------------------------------------------------------------- */
