Integracion con Plugin de Login AJAX

--- a/css/balearic-style.css
+++ b/css/balearic-style.css
@@ -873,3 +873,9 @@ WP-MEMBERS OVERRIDES
   font-weight: 700;
   margin-bottom: 1.5rem;
 }
+#wpmem_login .link-text {
+  padding: 6px 0;
+  width: 100%;
+  text-align: center;
+  font-size: 0.8rem;
+}
