--- a/css/balearic-style.less
+++ b/css/balearic-style.less
@@ -1033,3 +1033,10 @@ WP-MEMBERS OVERRIDES
         margin-bottom: 1.5rem;
     }
 }
+
+#wpmem_login .link-text {
+    padding: 6px 0;
+    width: 100%;
+    text-align: center;
+    font-size: 0.8rem;
+}
