--- a/css/balearic-style.less
+++ b/css/balearic-style.less
@@ -96,6 +96,44 @@ a {
     }
 }
 
+.lds-ripple {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+}
+
+.lds-ripple div {
+    position: absolute;
+    border: 4px solid @softblue;
+    opacity: 1;
+    border-radius: 50%;
+    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+
+.lds-ripple div:nth-child(2) {
+    animation-delay: -0.5s;
+}
+
+@keyframes lds-ripple {
+    0% {
+        top: 36px;
+        left: 36px;
+        width: 0;
+        height: 0;
+        opacity: 1;
+    }
+
+    100% {
+        top: 0px;
+        left: 0px;
+        width: 72px;
+        height: 72px;
+        opacity: 0;
+    }
+}
+
+
 .main-banner-title {
     margin-top: 1.5rem;
     position: relative;
@@ -1039,4 +1077,116 @@ WP-MEMBERS OVERRIDES
     width: 100%;
     text-align: center;
     font-size: 0.8rem;
+}
+
+.modal-login {
+    & .nav {
+        .nav-link {
+            background: @softblue;
+            color: #fff;
+            padding: 0.8rem;
+            border-radius: 0 !important;
+
+            &:hover {
+                background: @softbluehover;
+                color: @white;
+            }
+        }
+
+        .active {
+            color: #000 !important;
+            background-color: #0000 !important;
+        }
+    }
+
+    & .tab-pane {
+        border: 1px solid #dee2e6;
+        border-top: 0;
+        padding: 1.5rem 0;
+        padding-bottom: 0;
+
+        .loader {
+            text-align: center;
+            padding-top: 1rem;
+        }
+
+        .custom-login-item {
+            margin-bottom: 1rem;
+
+            & input {
+                border-radius: 0;
+            }
+
+            & label {
+                text-align: left;
+                display: block;
+                margin-bottom: 0.5rem;
+                margin-top: 0.5rem;
+                font-weight: 600;
+                font-size: 0.9rem;
+            }
+
+            & .btn-login {
+                color: @white;
+                background: @softblue;
+                width: 100%;
+                padding: 1rem;
+                margin-top: 1rem;
+
+                &:hover {
+                    color: @white;
+                    background: @softbluehover;
+                }
+            }
+        }
+
+        .custom-register-item {
+            margin-bottom: .5rem;
+
+            & .form-group {
+                margin-bottom: 0;
+            }
+
+            & input {
+                border-radius: 0;
+                font-size: 0.9rem;
+            }
+
+            & label {
+                text-align: left;
+                display: block;
+                margin-bottom: 0.5rem;
+                margin-top: 0.5rem;
+                font-weight: 600;
+                font-size: 0.9rem;
+            }
+
+            & .btn-login {
+                color: @white;
+                background: @softblue;
+                width: 100%;
+                padding: 1rem;
+                margin-top: 1rem;
+
+                &:hover {
+                    color: @white;
+                    background: @softbluehover;
+                }
+            }
+        }
+    }
+}
+
+.login-response {
+    text-align: center;
+    margin-top: 1rem;
+    font-size: 0.8rem;
+    font-weight: 600;
+}
+
+.register-response {
+    text-align: center;
+    margin-top: 1rem;
+    font-size: 0.8rem;
+    font-weight: 600;
 }
