--- a/css/custom-wordpress-admin-style.less
+++ b/css/custom-wordpress-admin-style.less
@@ -173,3 +173,16 @@ body.toplevel_page_balearic-control-panel {
         color: @white;
     }
 }
+
+
+.cmb2-metabox-slim .cmb-row {
+    padding: 10px 0 !important;
+
+    & .cmb2-metabox-description {
+        padding-bottom: 0 !important;
+    }
+
+    & .cmb-th {
+        padding-bottom: 0 !important;
+    }
+}
