Ajustes en palabras

--- a/css/balearic-style.less
+++ b/css/balearic-style.less
@@ -796,6 +796,7 @@ a {
     & .gallery-top {
         margin-bottom: 1.5rem;
         max-height: 480px;
+        overflow: hidden;
 
         & img {
             border-radius: 10px;
@@ -804,6 +805,7 @@ a {
     }
 
     & .gallery-thumbs {
+        overflow: hidden;
         & img {
             border-radius: 15px;
         }
